website/versioned_docs/version-22.2/TestingFrameworks.md
---
id: version-22.2-testing-frameworks
title: Testing Web Frameworks
original_id: testing-frameworks
---

Although Jest may be considered a React-specific test runner, in fact it is a
universal testing platform, with the ability to adapt to any JavaScript library
or framework. In this section we'd like to link to community posts and articles
about integrating Jest into other popular JS libraries.

## Vue.js

* [Testing Vue.js components with Jest](https://alexjoverm.github.io/series/Unit-Testing-Vue-js-Components-with-the-Official-Vue-Testing-Tools-and-Jest/)
  by Alex Jover Morales ([@alexjoverm](https://twitter.com/alexjoverm))
* [Jest for all: Episode 1 — Vue.js](https://medium.com/@kentaromiura_the_js_guy/jest-for-all-episode-1-vue-js-d616bccbe186#.d573vrce2)
  by Cristian Carlesso ([@kentaromiura](https://twitter.com/kentaromiura))

## AngularJS

* [Testing an AngularJS app with Jest](https://medium.com/aya-experience/testing-an-angularjs-app-with-jest-3029a613251)
  by Matthieu Lux ([@Swiip](https://twitter.com/Swiip))
* [Running AngularJS Tests with Jest](https://engineering.talentpair.com/running-angularjs-tests-with-jest-49d0cc9c6d26)
  by Ben Brandt ([@benjaminbrandt](https://twitter.com/benjaminbrandt))

## Angular

* [Testing Angular faster with Jest](https://www.xfive.co/blog/testing-angular-faster-jest/)
  by Michał Pierzchała ([@thymikee](https://twitter.com/thymikee))

## MobX

* [How to Test React and MobX with Jest](https://semaphoreci.com/community/tutorials/how-to-test-react-and-mobx-with-jest)
  by Will Stern ([@willsterndev](https://twitter.com/willsterndev))

## Redux

* [Writing Tests](http://redux.js.org/docs/recipes/WritingTests.html) by Redux
  docs
